# whisper-cpp-server

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  common-ggml.cpp  common-ggml.h  common-sdl.cpp  common-sdl.h  common.cpp  common.h  dr_wav.h  httplib.h  inference_handler.cpp  inference_handler.h  sdl_version.cpp  server.cpp  simplest.cpp  stream_components.cpp  stream_components.h  stream_components_audio.cpp  stream_components_audio.h  stream_components_output.cpp  stream_components_output.h  stream_components_params.h  stream_components_service.cpp  stream_components_service.h  stream_local.cpp  vcpkg.json  web_socket_server.cpp  whisper_http_server_base_httplib.cpp  whisper_params.h  whisper_server_base_on_uwebsockets.cpp
.github/workflows/: build.yml
client/: readme.md  websocket_client.py
common/: common-m4a.cpp  common-m4a.h  common-sdl.cpp  common-sdl.h  common.cpp  common.h  utils.cpp  utils.h
distribute/docker/base.en/: Dockerfile  readme.md
distribute/docker/builder/: Dockerfile
distribute/docker/large-v3/: Dockerfile  readme.md
distribute/docker/medium-q5_0/: Dockerfile  readme.md
distribute/docker/pure/: Dockerfile  readme.md
distribute/docker/tiny.en-q5_1/: Dockerfile  readme.md
distribute/docker/whisper-cpp-server-builder/: Dockerfile  readme.md
doc/: client_code.md  whiser-cpp-server-http-cn.md  whiser-cpp-server-http-en.md  whiser-cpp-server-websocket-cn.md  whiser-cpp-server-websocket-en.md  whiser-cpp-server.md
examples/: audio_vad.cpp  sdl_version.cpp  simplest.cpp  stream_local.cpp
handler/: echo_handler.h  hello_handler.cpp  hello_handler.h  inference_handler.cpp  inference_handler.h  ws_save_handler.h
httplib/: httplib.h
models/: .gitignore
params/: whisper_params.cpp  whisper_params.h
public/: index.html
resources/json/: transcription01.json  whisper_local.json
simplevad/: period_format.c  simple_vad.h
stream/: stream_components.h  stream_components_audio.cpp  stream_components_audio.h  stream_components_output.cpp  stream_components_output.h  stream_components_params.h  stream_components_service.cpp  stream_components_service.h
utils/: utils.cpp  utils.h
web/: index.html  readme.md
